# MOSAIC

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: sample_jd.md  sample_resume.json
src/mosaic/: config.py  main.py  web_app.py
src/mosaic/agents/: career_coach.py  evaluator.py  interviewee.py  interviewer.py  memory_manager.py  resume_modifier.py  resume_parser.py
src/mosaic/core/: agent.py  events.py  orchestrator.py  workflow.py
src/mosaic/core/memory/: __init__.py  context_manager.py  episodic.py  privileged.py  semantic.py  working.py
src/mosaic/llm/: client.py
src/mosaic/output/: report.py
src/mosaic/participants/: ai_participant.py  human_participant.py  protocol.py
src/mosaic/prompts/: evaluator_system.j2  interviewee_system.j2  interviewer_system.j2  resume_embellished.j2  resume_rigorous.j2  resume_wild.j2
src/mosaic/resume/: file_parser.py  schema.py  structured_input.py
src/mosaic/workflows/: full_interview.py  human_practice.py  resume_only.py
tests/integration/: test_integration.py
tests/unit/: test_file_parser.py
tests/unit/test_agents/: test_agents.py
tests/unit/test_memory/: test_memory.py
